# napalm

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: ai_false_positive_filtering.md  collections.md  competition.md  module-hacker.md  pip_architecture.md  running-with-napalm.md  testing.md  workflow_with_filter.md  workflows.md
napalm/analysis/: ai_false_positive.py  duplicate.py  filter.py
napalm/cli/base/: auto.py  collection.py  main.py  run.py  twin.py  workflow.py
napalm/cli/dev/: cli.py  compete.py  compete_model.py  info.py  install.py  testing.py
napalm/cli/dev/init/: __init__.py  main.py  python_plugin_installer.py
napalm/package/: __init__.py  collection.py  collection_manager.py  detector_info.py  discovery.py  entry_point.py
napalm/plugins/: base.py  installed.py
napalm/report/: __init__.py  fancy.py  markdown_report.py  sarif_report.py  simple_report.py
napalm/sarif/: get.py  location.py
napalm/storage/: __init__.py  collection.py  config.py  pickledb_provider.py  provider.py  twin.py  workflow.py
napalm/tool/: run.py  semgrep_info.py  semgrep_tool_runner.py  tool_runner.py
napalm/utils/: config.py  sarif.py  templates.py  workflow.py
templates/init/: napalm.py.jinja2  pyproject.toml.jinja2
templates/install/: pyproject.toml.jinja2
templates/report/: simple_report.md.jinja2
test/tool_runner/: test_semgrep_toolrunner.py
test/tool_runner/semgrep_test_dir/: example_config.yml  example_solidity.sol
